# pycobj

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
pycobj/: object.py  system.py  typespace.py
pycobj/memory/: dolphinmemory.py  filememory.py  memoryaccessor.py
