[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = 'pycobj'
description = "Experimental accessing of C data as python objects, based on types from an m2c context header."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Seeky"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "m2c @ git+https://github.com/matt-kempster/m2c.git@master",
    "dolphin-memory-engine",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/SeekyCt/pycobj"

